FarmConnect/service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: portal-nsw-service
              servicePort: 3000
          - path: /portalNSW/
            backend:
              serviceName: portal-nsw-service
              servicePort: 3000
          - path: /portalNT/
            backend:
              serviceName: portal-nt-service
              servicePort: 3051
